@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor PLANNER_COLOR
skinparam classBackgroundColor PLANNER_COLOR
skinparam ClassAttributeFontColor #FFFFFF
skinparam classAttributeIconSize 0

class Logic LOGIC_COLOR {
    +getPlannerFilteredTaskList(): ObservableList<Task>
    +updatePlannerFilteredTaskList(TaskDueInPredicate): void
}

class PlannerTabWindow {
    +PlannerTabWindow(Logic)
    +updateCalendar(CommandResult): void
    +updateIndicator(): void
}

class PlannerCalendarPanel {
    +PlannerCalendarPanel(PlannerDay)
    +fillCalendarTable(PlannerDay, LocalDate): void
    +clearCalendar(): void
    +changeCalendarMonthYear(YearMonth): void
    +updateIndicator(): void
}

class PlannerDayCard {
    +PlannerDayCard(PlannerDay)
    +clear(): void
    +updateIndicator(): void
    +setSameMonthColour(): void
    +setDifferentMonthColour(): void
    +setToday(): void
}

class PlannerDay {
    +PlannerDay(LocalDate)
    +{static} getCurrDay(): PlannerDay
    +createFirstDayOfMonth(): PlannerDay
}

class PlannerTaskListPanel {
    +PlannerTaskListPanel(ObservableList<Task>)
    +updateTitle(String): void
}

PlannerTabWindow -right-> Logic
PlannerTabWindow "1" *-down-> "1" PlannerCalendarPanel : < is stored in
PlannerTabWindow "1" *-down-> "1" PlannerTaskListPanel : < is stored in
PlannerCalendarPanel "1" *-down-> "plannerDayCards *" PlannerDayCard
PlannerCalendarPanel "1" --> "*" PlannerDay
PlannerDayCard "1" --> "1" PlannerDay
@enduml
